<resources>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="_00">00</string>
    <string name="_30_sec">30 sec</string>
    <string name="accepted">Accepted</string>
    <string name="accuracy_label">ACCURACY</string>
    <string name="accuracy_trend">Accuracy Trend</string>
    <string name="accuracy_vs_speed_based_on_recent_365_days_performance">- Accuracy Vs Speed based on recent 365 days performance</string>
    <string name="accuracy_vs_speed">Accuracy Vs Speed</string>
    <string name="accuracyy">Accuracy :</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="actual">Actual</string>
    <string name="add_comment">Add Comment</string>
    <string name="add_course">Add Course</string>
    <string name="add_guardian">Add Guardian</string>
    <string name="all">All</string>
    <string name="analytics">Analytics</string>
    <string name="answer_analysis">ANSWER ANALYSIS</string>
    <string name="answered">Answered</string>
    <string name="app_close_alert">Press back button once again to exit the app</string>
    <string name="app_name">Corsalite</string>
    <string name="app_update_instructions" />
    <string name="average_time">Average Time:</string>
    <string name="balance">Balance</string>
    <string name="bookmark">bookmark</string>
    <string name="bookmarks">Bookmark</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="cancel">Cancel</string>
    <string name="challenge_again">Challenge Again</string>
    <string name="challenge_history">Challenge history</string>
    <string name="challenge_your_friends">Challenge</string>
    <string name="challenge">Challenge</string>
    <string name="chapter_label">CHAPTER</string>
    <string name="chapter">Chapter</string>
    <string name="chapters">Chapters</string>
    <string name="check_result">Please wait to check result.</string>
    <string name="clear_answer">Clear Answer</string>
    <string name="close_drawer">Closed</string>
    <string name="commennt">Comment</string>
    <string name="comment">comment</string>
    <string name="comments">4 Comments</string>
    <string name="completed_topics">Completed Topics</string>
    <string name="computer_adaptive_test">Computer Adaptive Test</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="content_downloaded_toast">Your content is being downloaded in background</string>
    <string name="content">Content</string>
    <string name="correct_answer">Correct Answer:</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="correct">Correct</string>
    <string name="corsalite_application_version">Corsalite Application Version :</string>
    <string name="course_analysis">Course analysis</string>
    <string name="course_name">Course Name</string>
    <string name="course">Course</string>
    <string name="create_new_post">Create New Post</string>
    <string name="currency_earned">Currency Earned</string>
    <string name="currency">Currency</string>
    <string name="curriculum">Curriculum</string>
    <string name="dashe">--/--/----</string>
    <string name="dashes_colon">--:-- --</string>
    <string name="dashes_slashe">-/-</string>
    <string name="dashes_slashes">--/--/----</string>
    <string name="dashes">----</string>
    <string name="dashess">----- ----- ----- -----</string>
    <string name="date_07_09_2015_06_49_18_by">07/09/2015 06:49:18 by</string>
    <string name="date_label">DATE</string>
    <string name="date_time_07_09_2015_06_49_18_by">07/09/2015 06:49:18 by</string>
    <string name="date">Date</string>
    <string name="days_remaining">Days Remaining</string>
    <string name="days">Days</string>
    <string name="declined">Declined</string>
    <string name="delete">Delete</string>
    <string name="demo01">Demo01</string>
    <string name="description">Description :</string>
    <string name="descriptions">Description</string>
    <string name="division_28_347">28/347</string>
    <string name="download_content">Download Content</string>
    <string name="download">Download</string>
    <string name="downloading_latest_version">Downloading Latest Version</string>
    <string name="due_date">Due Date</string>
    <string name="due_dates">Due Date :</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="edit">Edit</string>
    <string name="effective_date">Effective Date</string>
    <string name="email_id">Email Id</string>
    <string name="email">Email</string>
    <string name="entityId"></string>
    <string name="event">Event</string>
    <string name="exam_date">Exam Date</string>
    <string name="exam_dates">Exam Date:</string>
    <string name="exam_history_not_available">Exam History Not Available</string>
    <string name="exam_history">Exam History</string>
    <string name="exam_name">Exam Name</string>
    <string name="exam_schedule">Exam Schedule</string>
    <string name="exam_summary">Exam Summary</string>
    <string name="exam">Exam</string>
    <string name="exercise">Exercise</string>
    <string name="exercises">Exercises</string>
    <string name="explanation">Explanation</string>
    <string name="failed_fetch">Failed to fetch user profile information</string>
    <string name="file_exists">File already exists.</string>
    <string name="file_save_failed">Unable to save file.</string>
    <string name="file_saved">File saved</string>
    <string name="first_name">First Name</string>
    <string name="flagged_for_review">Flagged for review</string>
    <string name="flagged_questions">Flagged Questions</string>
    <string name="forgot_pass_word">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forum">Forum</string>
    <string name="four_five_nine_459">459</string>
    <string name="full_question_paper">Full Question Paper</string>
    <string name="hall_ticket_number">Hall Ticket Number</string>
    <string name="header">Header</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hours">Hours</string>
    <string name="how_to_solve_the_given_problem_and_also_can_i_get_a_clear_explanations_for_these_sums">how to solve the given problem. and also can I get a clear explanations for these sums?</string>
    <string name="hurray">HURRAY!</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_drive_file">&#xe077;</string>
    <string name="ic_email">&#xe087;</string>
    <string name="ic_folder_mydrive">&#xe09e;</string>
    <string name="ic_folder_shared">&#xe09f;</string>
    <string name="ic_folder">&#xe09d;</string>
    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
    <string name="ic_keyboard_arrow_left">&#xe0c6;</string>
    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
    <string name="ic_keyboard_arrow_up">&#xe0c8;</string>
    <string name="ic_laptop">&#xe0d4;</string>
    <string name="ic_photo_album">&#xe112;</string>
    <string name="ic_photo_library">&#xe113;</string>
    <string name="ic_photo">&#xe111;</string>
    <string name="in_progress">In Progress</string>
    <string name="initiated">Initiated</string>
    <string name="instructions">Instructions</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invitefriends">INVITEFRIENDS</string>
    <string name="is_author_only">is Author Only</string>
    <string name="jan_2017">Jan 2017</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_next">Next</string>
    <string name="label_note">Note : </string>
    <string name="label_test_coverage_chapter">Test Coverage by Chapter</string>
    <string name="label_test_level">Level</string>
    <string name="label_test_question_count">Question Count</string>
    <string name="label_test_questions_correct">Answered Correct Questions</string>
    <string name="label_test_questions_remaining">Remaining Questions</string>
    <string name="label_test_questions_wrong">Answered Wrong Questions</string>
    <string name="last_name">Last Name</string>
    <string name="last_visit">Last Visit :</string>
    <string name="latest_version_available">Latest Version Available :</string>
    <string name="level_1">Level 1</string>
    <string name="level_text">Level</string>
    <string name="level">level 2</string>
    <string name="like">like</string>
    <string name="likes">Like</string>
    <string name="localytics_api_key">53219e39511fbd4230deb55-401673cc-52a8-11e6-18db-00cef1388a40</string>
    <string name="lock">Lock</string>
    <string name="log_out">Log Out</string>
    <string name="login_failed">Login failed</string>
    <string name="login_successful">Logged in Successfully</string>
    <string name="login">LOGIN</string>
    <string name="logout_failed">Logout failed</string>
    <string name="logout_successful">Logged out Successfully</string>
    <string name="logout">Logout</string>
    <string name="marks_label">MARKS</string>
    <string name="marks_min">- marks/min</string>
    <string name="marks">Marks</string>
    <string name="material_icon_font">fonts/material-icon-font.ttf</string>
    <string name="max_mark">Max Marks:</string>
    <string name="max_marks">Max Marks</string>
    <string name="me">Me</string>
    <string name="menu_add_courses">Add Courses</string>
    <string name="menu_add_guardian">Add Guardian</string>
    <string name="menu_add">Add</string>
    <string name="menu_challenge_your_friends">Challenge your friends</string>
    <string name="menu_download_pdf">Download PDF</string>
    <string name="menu_exam_history">Exam History</string>
    <string name="menu_mock_test">Mock Test</string>
    <string name="menu_part_test">Part Test</string>
    <string name="menu_progress_card">Progress Card</string>
    <string name="menu_rate_it">Rate Content</string>
    <string name="menu_read_offline">Read Offline</string>
    <string name="menu_recommended_reading">Recommended Reading</string>
    <string name="menu_scheduled_test">Scheduled Test</string>
    <string name="menu_take_test">Take Test</string>
    <string name="menu_view_notes">View Notes</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="minutes">Minutes</string>
    <string name="mock_tests">Mock Tests</string>
    <string name="my_groups">My Groups</string>
    <string name="newtons_laws_o_motion">Newtons laws o Motion</string>
    <string name="no_analytics_available_for_accuracy_vs_speed">No Analytics available for Accuracy vs Speed</string>
    <string name="dates">Dates</string>
    <string name="notes">Notes</string>
    <string name="part_test">Part Test</string>
    <string name="password">Password</string>
    <string name="please_do_not_close_the_app_until_the_latest_version_is_downloaded">(Please do not close the app until the latest version is downloaded)</string>
    <string name="roboto_light">fonts/Roboto-Light.ttf</string>
    <string name="roboto_regular">fonts/Roboto-Regular.ttf</string>
    <string name="score">Score</string>
    <string name="speed_label">SPEED</string>
    <string name="start_reading">Start Reading</string>
    <string name="subject_label">SUBJECT</string>
    <string name="time">Time</string>
    <string name="title_activity_user_profile">My Profile</string>
    <string name="topic_label">TOPIC</string>
    <string name="update">UPDATE</string>
    <string name="upgrade">Upgrade</string>
    <string name="username">Username</string>
    <string name="virtual_currency">Virtual Currency</string>
    <string name="you_are_up_to_date_with_the_upgrades">You are up to date with the upgrades</string>
    <string name="zero_10">10</string>
</resources>