<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.education.corsalite.activities.UserProfileActivity">
    <item
        android:id="@+id/action_change_text_size"
        android:icon="@drawable/ico_actionbar_add"
        app:showAsAction="always"
        android:visible="false"
        android:title="@string/menu_add"
        />

    <item
        android:id="@+id/action_scheduled_test"
        app:showAsAction="never"
        android:title="@string/menu_scheduled_test"
        android:visible="false"/>

    <item
        android:id="@+id/action_mock_test"
        app:showAsAction="never"
        android:title="@string/menu_mock_test"
        android:visible="false"/>

    <item
        android:id="@+id/action_challenge_your_friends"
        app:showAsAction="never"
        android:title="@string/menu_challenge_your_friends"
        android:visible="false"/>

    <item
        android:id="@+id/action_exam_history"
        app:showAsAction="never"
        android:title="@string/menu_exam_history"
        android:visible="false"/>

    <item
        android:id="@+id/action_recommended_reading"
        app:showAsAction="never"
        android:title="@string/menu_recommended_reading"
        android:visible="false"/>

    <item
        android:id="@+id/action_progress_Card"
        app:showAsAction="never"
        android:title="@string/menu_progress_card"
        android:visible="false"/>
</menu>
