<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_subject_name"
        android:layout_weight="1"
        android:visibility="gone"
        android:text="@string/subject_label"
        style="@style/analytics_recommended_reading_heading_text_style" />

    <TextView
        android:id="@+id/tv_chapter"
        android:layout_weight="1.5"
        android:text="@string/chapter_label"
        style="@style/analytics_recommended_reading_heading_text_style" />


    <TextView
        android:layout_weight="2"
        android:id="@+id/tv_topic"
        android:text="@string/topic_label"
        style="@style/analytics_recommended_reading_heading_text_style" />

    <TextView
        android:layout_weight="1"
        android:id="@+id/tv_date"
        android:text="@string/date_label"
        style="@style/analytics_recommended_reading_heading_text_style" />


    <TextView
        android:id="@+id/tv_marks"
        android:layout_weight="1"
        android:text="@string/marks_label"
        style="@style/analytics_recommended_reading_heading_text_style" />

    <TextView
        android:id="@+id/tv_accuracy"
        android:layout_weight="1"
        android:text="@string/accuracy_label"
        style="@style/analytics_recommended_reading_heading_text_style" />

    <TextView
        android:id="@+id/tv_speed"
        android:layout_weight="1"
        android:text="@string/speed_label"
        style="@style/analytics_recommended_reading_heading_text_style" />

</LinearLayout>