<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.education.corsalite.activities.UserProfileActivity">
    <item
        android:id="@+id/action_change_text_size"
        android:icon="@drawable/ico_actionbar_add"
        app:showAsAction="always"
        android:visible="false"
        android:title="@string/menu_add" />

    <item
        android:id="@+id/action_add_guardian"
        app:showAsAction="never"
        android:title="@string/menu_add_guardian" />
    <item
        android:id="@+id/action_add_courses"
        app:showAsAction="never"
        android:title="@string/menu_add_courses" />

    <item
        android:id="@+id/action_logout"
        app:showAsAction="never"
        android:title="@string/logout" />

    <item
        android:id="@+id/analytics"
        app:showAsAction="never"
        android:title="@string/analytics" />
</menu>
