<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/my_profile"
            android:checked="false"
            android:icon="@drawable/abc_ratingbar_full_material"
            android:title="@string/title_activity_user_profile" />

        <item
            android:id="@+id/my_groups"
            android:checked="false"
            android:icon="@drawable/abc_ratingbar_full_material"
            android:title="@string/my_groups" />

        <item
            android:id="@+id/virtual_curreny"
            android:checked="false"
            android:icon="@drawable/abc_ratingbar_full_material"
            android:title="@string/virtual_currency" />
        <item
            android:id="@+id/invite_friends"
            android:checked="false"
            android:icon="@drawable/abc_ratingbar_full_material"
            android:title="@string/invite_friends" />

        <item
            android:id="@+id/exam_schedule"
            android:checked="false"
            android:icon="@drawable/abc_ratingbar_full_material"
            android:title="@string/exam_schedule" />
    </group>
</menu>