<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp18">

        <EditText
            android:id="@+id/username_txt"
            fontPath="@string/roboto_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:hint="@string/username"
            android:inputType="textCapCharacters" />

        <EditText
            android:id="@+id/firstname_txt"
            fontPath="@string/roboto_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:gravity="center_vertical|left"
            android:hint="@string/first_name"
            android:inputType="text" />


        <EditText
            android:id="@+id/lastname_txt"
            fontPath="@string/roboto_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:gravity="center_vertical|left"
            android:hint="@string/last_name"
            android:inputType="text" />


        <EditText
            android:id="@+id/emailid_txt"
            fontPath="@string/roboto_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:gravity="center_vertical|left"
            android:hint="@string/email_id"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:weightSum="2">

            <EditText
                android:id="@+id/password_txt"
                fontPath="@string/roboto_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirm_password_txt"
                fontPath="@string/roboto_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <com.education.corsalite.views.CustomButton
                android:id="@+id/btn_cancel"
                fontPath="@string/roboto_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp8"
                android:background="@color/transparent"
                android:padding="@dimen/dp5"
                android:text="@string/cancel_btn"
                android:textColor="@color/black" />

            <com.education.corsalite.views.CustomButton
                android:id="@+id/btn_submit"
                fontPath="@string/roboto_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp8"
                android:background="@color/transparent"
                android:padding="@dimen/dp5"
                android:text="@string/update"
                android:textColor="@color/blue" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>