<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_app_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.education.corsalite.activities.AppUpdateActivity">

    <TextView
        android:id="@+id/download_status_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp20"
        android:text="@string/downloading_latest_version"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp10"
        android:text="@string/please_do_not_close_the_app_until_the_latest_version_is_downloaded"/>

    <ProgressBar
        android:id="@+id/download_progress"
        android:layout_width="@dimen/dp300"
        android:layout_height="@dimen/dp40"
        android:max="100"
        android:progress="0"
        style="@android:style/Widget.Holo.ProgressBar.Horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textSize="@dimen/sp20"
        android:layout_marginTop="@dimen/dp50"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_update_instructions"
        android:textSize="@dimen/sp12"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp50"
        android:layout_marginRight="@dimen/dp50"/>

</LinearLayout>
