<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="5">
    <TextView
        android:id="@+id/tv_chapter"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="@dimen/dp10"
        android:text="@string/newtons_laws_o_motion"
        android:textColor="@color/black"
        android:textSize="@dimen/sp13"
        android:lines="1" />
    <EditText
        android:id="@+id/tv_recommended"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/zero_10"
        android:padding="@dimen/dp10"
        android:inputType="number"
        android:background="@drawable/tv_border_normal"
        android:textColor="@color/black"
        android:textSize="@dimen/sp13"
        android:gravity="center_horizontal"/>
    <View
        android:layout_width="@dimen/dp1"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_questions"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/four_five_nine_459"
        android:padding="@dimen/dp10"
        android:textColor="@color/black"
        android:textSize="@dimen/sp13"
        android:gravity="center_horizontal"/>

</LinearLayout>