<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.education.corsalite.activities.SettingsActivity">

    <LinearLayout
        android:id="@+id/app_current_version_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/corsalite_application_version"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/app_current_version_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/sp16"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/app_latest_version_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest_version_available"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/app_latest_version_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/sp16"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/app_up_to_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:visibility="gone"
        android:text="@string/you_are_up_to_date_with_the_upgrades"/>

    <Button
        android:id="@+id/app_upgrade_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:paddingLeft="@dimen/dp40"
        android:paddingRight="@dimen/dp40"
        android:text="@string/upgrade" />

</LinearLayout>
