<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/dp8"
    android:paddingEnd="@dimen/dp16"
    android:paddingStart="@dimen/dp16"
    android:paddingTop="@dimen/dp8">

    <TextView
        android:id="@+id/txt_view_header_test_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_test_coverage_chapter"
        android:textColor="@color/black"
        android:textSize="@dimen/sp20" />

    <View
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp1"
        android:layout_weight="1" />

    <com.education.corsalite.views.CustomButton
        android:id="@+id/btn_header_test_cancel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp30"
        android:background="@drawable/selector_btn_dark_gray"
        android:text="@string/label_cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16" />

    <com.education.corsalite.views.CustomButton
        android:id="@+id/btn_header_test_next"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp30"
        android:layout_marginStart="@dimen/dp8"
        android:background="@drawable/selector_btn_green"
        android:text="@string/label_next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16" />

</LinearLayout>